5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1585_825.log
== SUBMITION (2019-03-25 13:51:47) 
-- CODE:
import_from_math


-- EXECUTION TIME:
0.162667
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/825/main.py", line 1, in <module>
    import_from_math
NameError: name 'import_from_math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:52:26) 
-- CODE:
from math import pi


-- EXECUTION TIME:
0.138925
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:

-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:52:31) 
-- CODE:
from math import pi


-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:48:40) 
-- CODE:
from math import pi
raio=float(input("digite o raio: "))

area= pi*raio**2




-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:49:17) 
-- CODE:
from math import pi
raio=float(input("digite o raio: "))

area= pi*raio**2
print(area)



-- OUTPUT:
63.61725123519331
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:51:16) 
-- CODE:
from math import pi
raio=float(input("digite o raio: "))

area= pi*raio**2

volume= 4/3*pi*raio**3

print(round(area,3))
print(round(volume,3))



-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:51:40) 
-- CODE:
from math import pi
raio=float(input("digite o raio: "))

area= pi*raio**2

volume= 4/3*pi*raio**3

print(round(area,3))
print(round(volume,3))



-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:51:48) 
-- CODE:
from math import pi
raio=float(input("digite o raio: "))

area= pi*raio**2

volume= 4/3*pi*raio**3

print(round(area,3))
print(round(volume,3))



-- EXECUTION TIME:
0.21811
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
